--- a/tetris.css
+++ b/tetris.css
@@ -4,8 +4,8 @@
  }
 .gameArea {
 	position:relative;
-	width:203px;
-	height:404px;
+	width:202px;
+	height:401px;
 	border:1px solid black;
 	float:left;
 }
@@ -46,22 +46,27 @@
 .block {
 
 	position:absolute;
-	width:15px;
-	height:15px;
-	border:3px solid black;
-	margin:2px;
+	width:18px;
+	height:18px;
+	background-color:black;
+	border:1px solid white;
+
+	display: -webkit-flex;
+    display: flex;
+    -webkit-align-items: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    justify-content: center;
 }
 
-.block:before{
-	position:relative;
-	top:2px;
-	left:2px;
+.block div{
+	margin:auto auto;
+	width:10px;
+	height:10px;
 	background-color:black;
-	width:11px;
-	height:11px;
-	content:' ';
-	display:block;
+	border:2px solid white;
 }
+
 
 img{
 	margin-top:10px;
